ui: fix navbar text align

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,29 +163,13 @@ body {
     }
 }
 
-.modebar-btn .icon {
-    width: 28px;
-    height: 28px;
-}
-
 .navbar {
     align-items: center;
     justify-content: flex-start;
 }
 
 .navbar .btn {
-    margin-right: 1vw;
-}
-
-.navbar span {
-    position: relative;
-    top: 2px;
-}
-
-.navbar input {
-    position: relative;
-    top: 3px;
-    transform: scale(1.3);
+    margin-right: 1rem;
 }
 
 .navimg {
